--- a/views/resources/index.ejs
+++ b/views/resources/index.ejs
@@ -28,13 +28,13 @@
         <% if (authorized && (typeof resource.user === 'undefined' || resource.user.email === email)) { %>
           <div class="card-footer">
             <a href="/resources/<%= resource.id %>/edit">
-              <!-- <i class="fa fa-edit"></i> -->
+              <i class="fa fa-edit"></i>
             </a>
             &nbsp;/&nbsp;
             <form class="form-inline" action="/resources/delete" method="post" onsubmit="return confirm('Are you sure you want to delete all your hard work?');">
               <input type="hidden" value="<%= resource.id %>" name="id">
               <button class="delete" type="submit">
-                <!-- <i class="fa fa-trash"></i> -->
+                <i class="fa fa-trash"></i>
               </button>
             </form>
           </div>
